--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
+    "formik": "^2.4.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -22,7 +24,7 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
